force-app/main/default/objects/RPA_Submission_Automation_rules__mdt/fields/HI_Carrier_Id__c.field-meta.xml
<CustomField>
    <fullName>HI_Carrier_Id__c</fullName>
    <label>HI Carrier Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>