force-app/main/default/objects/RPA_Submission_Automation_rules__mdt/fields/No_of_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Business_Days__c</fullName>
    <label>No of days to Submission Deadline</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>