force-app/main/default/objects/RPA_Submission_Automation_rules__mdt/fields/No_of_days_to_Effective_Deadline__c.field-meta.xml
<CustomField>
    <fullName>No_of_days_to_Effective_Deadline__c</fullName>
    <label>No of days to Effective Deadline</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>