force-app/main/default/objects/RPA_Submission_Automation_rules__mdt/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPA Only</fullName>
                <default>true</default>
                <label>RPA Only</label>
            </value>
            <value>
                <fullName>HI Only</fullName>
            </value>
            <value>
                <fullName>HI and RPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>